<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mirte_ros</name>
  <version>0.0.0</version>
  <description>Mirte ROS meta-package</description>
  <maintainer email="g.rezendesilva@tudelft.nl">Gustavo Rezende</maintainer>
  <license>Apache-2.0</license>

  <depend>mirte_bringup</depend>
  <depend>mirte_control</depend>
  <depend>mirte_description</depend>
  <depend>mirte_moveit_config</depend>
  <depend>mirte_msgs</depend>
  <depend>mirte_telemetrix_cpp</depend>
  <depend>mirte_teleop</depend>
  <depend>mirte_test</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
